# MIZDB

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  aenderungsliste.html  aktion.html  artikel.html  audio.html  ausgabe.html  autor.html  band.html  bedienelement.html  benutzer.html  bestand.html  broschuere.html  buch.html  datensatz.html  deinstall.html  delete_me.py  docker-compose.dev-server.yaml  docker-compose.dev.yaml  docker-compose.test-server.yaml  docker-compose.yaml  docker-entrypoint.sh  einfuehrung.html  email.html  erfassung.html  foto.html  genre.html  grundsaetze.html  herausgeber.html  id.html  index.html  install.html  (+43 more)
.github/workflows/: build.yml  test.yml
DBentry/: actions.py  admin.py  advsfforms.py  apps.py  changelist.py  constants.py  factory.py  fields.py  filters.py  forms.py  helper.py  logging.py  m2m.py  managers.py  models.py  query.py  signals.py  sites.py  stuff.py  tests.py  urls.py  utils.py  validators.py  views.py  widgets.py
DBentry/ac/: creator.py  tests.py  urls.py  views.py  widgets.py
DBentry/actions/: __init__.py  actions.py  base.py  decorators.py  forms.py  views.py
DBentry/autocomplete/: forms.py  forms2.py  urls.py  views.py
DBentry/base/: admin.py  forms.py  models.py  views.py
DBentry/bulk/: fields.py  forms.py  handlers.py  views.py
DBentry/db/: base.py
DBentry/factories/: __init__.py  m2m.py  models.py
DBentry/help/: forms.py  helptext.py  models.py  registry.py  templatetags.py  test.py  urls.py  views.py
DBentry/ie/: __init__.py  again.py  argh.py  discogs.py  forms.py  importer.py  name_utils.py  reader.py  relational.py  tests.py  urls.py  utils.py  views.py
DBentry/maint/: forms.py  urls.py  views.py  widgets.py
DBentry/migrations/: 0001_initial.py  0001_initial_squashed_0114.py  0002_DBentry.py  0002_DBentry_CNfields_ausgabe.py  0002_rename_kalendar_to_kalender.py  0003_DBentry.py  0003_DBentry_CNmodels.py  0003_remove_m2m_fields.py  0003_remove_m2m_through.py  0003_video_model.py  0004_DBentry.py  0004_DBentry_ModelRework_01.py  0004_alias_verbose_name_plural.py  0004_deletes_m2m_models.py  0005_DBentry.py  0005_DBentry_ModelRework_02_m2mFieldRemoval.py  0005_add_model_audio_medium.py  0005_readds_m2m_fields.py  0006_DBentry.py  0006_DBentry_ModelRework_03_m2mModelRemoval.py  0006_data_formate_to_audio_medium.py  0007_DBentry.py  0007_DBentry_ModelRework_04_m2mFieldReadded.py  0007_delete_format_models.py  0008_DBentry.py  0008_DBentry_ModelRework_05.py  0009_DBentry.py  0009_DBentry_ModelRework_06.py  0009_remove_m2m_through.py  0010_DBentry.py  0010_DBentry_ModelRework_07_InfoFieldRename.py  0011_DBentry.py  0011_DBentry_ModelRework_08_BeschreibungBemerkungFields.py  0012_DBentry.py  0012_DBentry_ModelRework_09_OnDelete.py  0012_audio_video_tweaks.py  0013_DBentry.py  0013_DBentry_ModelRework_10_OrteM2MAdded.py  0014_DBentry.py  0014_DBentry_ModelRework_11_OrteM2MData.py  (+156 more)
DBentry/printer/: printer.py
DBentry/search/: __init__.py  admin.py  forms.py  utils.py
DBentry/templates/: googlebuttonwidget.html  rangewidget.html
DBentry/templates  --unbenutzt/: base_site.html  bla.html  browser.html  crispyexample.html  formsettest.html  list.html  person_add.html  person_list.html  searchtest.html
DBentry/templatetags/: asf_tag.py  miz_tags.py  object_tools.py  reset_ordering.py
DBentry/tests/: base.py  data.py  madness.py  mixins.py  test_actions.py  test_admin.py  test_asf.py  test_changelist.py  test_factory.py  test_fields.py  test_forms.py  test_logging.py  test_m2m.py  test_manager.py  test_models.py  test_query.py  test_search.py  test_signals.py  test_sites.py  test_strategy.py  test_templatetags.py  test_urls.py  test_utils.py  test_validators.py  test_views.py
DBentry/utils/: __init__.py  admin.py  copyrelated.py  dates.py  debug.py  inspect.py  jquery.py  merge.py  models.py  text.py
MIZDB/: .gitignore  settings.py  settings_dev.py  settings_shared.py  test_settings.py  urls.py  wsgi.py
MIZDB/settings/: __init__.py  config_template.yaml  defaults.py  development.py  production.py
css/: material_extra.css
db/: .gitignore  backup.sh  dump.sh
dbentry/: admin.py  apps.py  changelist.py  constants.py  csrf.py  factory.py  fields.py  forms.py  m2m.py  managers.py  models.py  query.py  sites.py  urls.py  validators.py  views.py
dbentry/ac/: __init__.py  creator.py  urls.py  views.py  widgets.py
dbentry/actions/: __init__.py  actions.py  base.py  decorators.py  forms.py  views.py
dbentry/admin/: actions.py  admin.py  base.py  changelist.py  forms.py  site.py  urls.py  views.py
dbentry/autocomplete/: urls.py  views.py  widgets.py
dbentry/base/: __init__.py  admin.py  (+3 more)
docker/: docker-compose.env  docker-compose.yaml
docs/: aenderungsliste.md  aktion.md  aktionen.md  artikel.md  audio.md  audio_material.md  ausgabe.md  autor.md  band.md  bedienelement.md  benutzer.md  bestand.md  broschuere.md  broschüre.md  buch.md  datensatz.md  deinstall.md  einfuehrung.md  einführung.md  erfassung.md  foto.md  genre.md  grundsaetze.md  grundsätze.md  hauptseite.md  help_base.md  herausgeber.md  id.md  index.md  install.md  instrument.md  lagerort.md  loeschen.md  löschen.md  magazin.md  musiker.md  oberflaeche.md  oberfläche.md  ort,_spielort,_veranstaltung.md  ort.md  (+17 more)
docs_theme/: main.html
hooks/: post_build.py
jquery_351/: README.md
logs/: musikersplitlog.txt
requirements/: base.in  base.txt  constraints.txt  dev.in  dev.txt  docs.in  docs.txt  test.in  test.txt
scripts/: bump_version.py  check_update.py  droptest.sh  get-mizdb.sh  git-flow-hooks.sh  install-mizdb.sh  update_available.py
scss/: mizdb.scss  theme.scss
search/: search_index.json
tests/: case.py  dbrouter.py  factory.py  mixins.py  model_factory.py  models.py  runtests.py  settings.py  test_factory.py  test_install.py  test_settings.py  urls.py
watchlist/: admin.py  models.py  tests.py  urls.py  views.py
wtftyping/: composite.py  form.py  mixin_typing.py  mixin_typing.pyi  stack.py  version.py
(+758 files in other folders)
